Fix display issue on IE. Correct bug where dates with no tests would display

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,7 @@
 
 .toolbar{
   border-top: solid 1px $blue-grey-50;
+  height: 50px;
 }
 
 textarea{
